# patron-backend

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  enhancement-request.yml
.github/workflows/: workspace.yml
crates/builder/: Cargo.toml
crates/builder/src/: cli.rs  commands.rs  log_collector.rs  main.rs  process.rs
crates/builder/src/commands/: serve.rs
crates/builder/src/process/: container.rs  volume.rs  worker.rs
crates/cli/: Cargo.toml
crates/cli/src/: archiver.rs  main.rs
crates/cli/src/commands/: auth.rs  deploy.rs
crates/common/: Cargo.toml
crates/common/artifacts/: astar.scale
crates/common/src/: config.rs  hash.rs  lib.rs  logging.rs  rpc.rs  s3.rs
crates/common/src/rpc/: mod.rs  schemas.rs
crates/db/: Cargo.toml
crates/db/src/: build_session.rs  build_session_token.rs  cli_token.rs  code.rs  contract.rs  diagnostic.rs  event.rs  file.rs  lib.rs  log.rs  node.rs  public_key.rs  source_code.rs  token.rs  user.rs
crates/event_client/: Cargo.toml
crates/event_client/src/: cli.rs  main.rs  utils.rs
crates/event_client/src/cli/: initialize.rs  traverse.rs  update_contract.rs  watch.rs
crates/migration/: Cargo.toml
crates/migration/src/: cli.rs  lib.rs  m20220101_000001_create_users_table.rs  m20220101_000002_create_public_keys_table.rs  m20220101_000003_create_authentication_tokens_table.rs  m20220101_000004_create_nodes_table.rs  m20220101_000005_create_codes_table.rs  m20220101_000006_create_contracts_table.rs  m20220101_000007_create_source_codes_table.rs  m20220101_000008_create_files_table.rs  m20220101_000009_create_build_sessions_table.rs  m20220101_000010_create_build_session_tokens_table.rs  m20220101_000011_create_logs_table.rs  m20220101_000012_create_cli_tokens_table.rs  m20220101_000013_create_events_table.rs  m20220101_000014_remove_node_schema.rs  m20220101_000015_remove_rust_version.rs  m20220101_000016_add_project_directory.rs  m20220101_000017_create_diagnostics_table.rs  main.rs
crates/patron/: Cargo.toml
crates/patron/src/: archiver.rs  commands.rs  config.rs  main.rs  process.rs
crates/patron/src/commands/: auth.rs  build.rs  deploy.rs  verify.rs  watch.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  hex_hash.rs  main.rs  pagination.rs  schema.rs  validation.rs
crates/server/src/handlers/: mod.rs
crates/server/src/handlers/auth/: exchange.rs  login.rs  mod.rs  register.rs
crates/server/src/handlers/build_sessions/: create.rs  details.rs  diagnostics.rs  latest.rs  list.rs  logs.rs  metadata.rs  mod.rs  status.rs  wasm.rs
crates/server/src/handlers/contracts/: details.rs  events.rs  mod.rs
crates/server/src/handlers/docs/: mod.rs
crates/server/src/handlers/files/: details.rs  mod.rs  seal.rs  upload.rs
crates/server/src/handlers/keys/: delete.rs  list.rs  mod.rs  verify.rs
crates/server/src/handlers/payment/: check.rs  mod.rs
crates/server/src/handlers/source_code/: list.rs  mod.rs  upload.rs
crates/server/src/testing/: mod.rs
docs/: cli.md  self-hosted.md
nix/: base.nix  build-stages.nix  cargo-contract.nix  ink-builder.nix  server.nix
