[package]
name = "builder"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
bollard = "0.14.0"
clap = { version = "4.2.7", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error", "from"] }
futures-util = "0.3.28"
ink-analyzer = "0.8.6"
itertools = "0.10.5"
normalize-path = "0.2.1"
strip-ansi-escapes = "0.2.0"
tar = "0.4.38"
tempfile = "3.5.0"
tracing = "0.1.37"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "process", "sync"] }
tokio-stream = "0.1.14"

common = { path = "../common", features = ["logging", "s3"] }
db = { path = "../db" }
