[package]
name = "common"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
aws-config = { version = "0.55.2", optional = true }
aws-sdk-s3 = { version = "0.27.0", optional = true }
blake2 = "0.10.6"
byte-unit = { version = "4.0.19", default-features = false }
figment = { version = "0.10.8", default-features = false, features = ["env", "toml"] }
futures-util = { version = "0.3.28", optional = true }
itertools = { version = "0.10.5", optional = true }
hex = "0.4.3"
pallet-contracts-primitives = { version = "23.0.0", optional = true }
parity-scale-codec = { version = "3.5.0", optional = true }
serde = { version = "1.0.162", features = ["derive"] }
subxt = { version = "0.28.0", optional = true }
tracing-core = { version = "0.1.30", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }

[features]
logging = ["tracing-core", "tracing-subscriber"]
s3 = ["aws-config", "aws-sdk-s3"]
rpc = ["futures-util", "itertools", "pallet-contracts-primitives", "parity-scale-codec", "subxt"]
