[package]
name = "common"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
aws-config = { version = "0.55.2", optional = true }
aws-sdk-s3 = { version = "0.27.0", optional = true }
blake2 = "0.10.6"
byte-unit = { version = "4.0.19", default-features = false }
figment = { version = "0.10.8", default-features = false, features = ["env", "toml"] }
futures-util = { version = "0.3.28", optional = true }
hex = "0.4.3"
lru = { version = "0.11.0", optional = true }
serde = { version = "1.0.162", features = ["derive"] }
tracing-core = { version = "0.1.30", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }

frame-metadata = { version = "15.1", default-features = false, features = ["v14", "serde_full", "decode"], optional = true }
parity-scale-codec = { version = "3.6.3", optional = true }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
scale-decode = { version = "0.9.0", optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch = "polkadot-v0.9.43", default-features = false, features = ["jsonrpsee-client", "contracts-xt"], optional = true }

[features]
logging = ["tracing-core", "tracing-subscriber"]
s3 = ["aws-config", "aws-sdk-s3"]
rpc = [
    "lru",
    "frame-metadata",
    "futures-util",
    "parity-scale-codec",
    "pallet-contracts",
    "pallet-contracts-primitives",
    "scale-decode",
    "sp-core",
    "sp-version",
    "substrate-api-client"
]
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
