[package]
name = "migration"
version.workspace = true
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "3.2", default-features = false }
sea-orm-cli = { version = "0.11.3", default-features = false }
sea-orm-migration = { version = "0.11.3", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"

common = { path = "../common", features = ["logging"] }
db = { path = "../db" }
