[package]
name = "patron"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error", "from"] }
figment = { version = "0.10.8", default-features = false, features = ["env", "toml"] }
futures-util = "0.3.28"
hex = "0.4.3"
home = "0.5.5"
indicatif = "0.17.3"
itertools = "0.10.5"
notify = "6.1.1"
open = "4.1.0"
os_info = { version = "3.7.0", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.11.17", default-features = false, features = ["tokio-rustls", "stream", "json", "multipart", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.97"
tempfile = "3.5.0"
tokio = { version = "1.32.0", features = ["rt", "macros", "io-util", "process", "sync"] }
tokio-tungstenite = "0.20.0"
toml = { version = "0.7.3", default-features = false, features = ["display"] }
walkdir = "2.3.3"
which = "4.4.0"
zip = { version = "0.6.6", default-features = false }

common = { path = "../common", default-features = false }

