[package]
name = "server"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers", "multipart"] }
axum-derive-error = "0.1.0"
derive_more = "0.99.17"
futures-util = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
ink_metadata = "4.2.0"
once_cell = "1.17.1"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_plain = "1.0.1"
serde_json = "1.0.96"
sp-core = "20.0.0"
tracing = "0.1.37"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
validator = { version = "0.16.0", features = ["derive"] }

common = { path = "../common", features = ["logging", "s3", "rpc"] }
db = { path = "../db" }

[dev-dependencies]
assert_json = "0.1.0"
common = { path = "../common", features = ["logging", "s3", "rpc", "test-utils"] }
common-multipart-rfc7578 = "0.6.0"
db = { path = "../db", features = ["testing"] }
hyper = "0.14.26"
migration = { path = "../migration" }
rand = "0.8.5"
tower = "0.4.13"
